tests/fail/test-neg-return-conflict3.ctds

bool func(){
  return;
}

void main(){
  return;
}
